impressao do campo 'nome' da posicao zero do array

--- a/Aula2/index.html
+++ b/Aula2/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div ng-controller="TarefasController">
-      {{log}}
+       {{log[0].nome}}
     </div>
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
       <script src="script.js" charset="utf-8"></script>
