adicionado diretiva ng-repeat para imprimir o nome e prioridadeda lista

--- a/Aula2/index.html
+++ b/Aula2/index.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <div ng-controller="TarefasController">
-       {{log[0].nome}}
+       <ul>
+         <li ng-repeat="tarefa in tarefas">{{tarefa.nome}} - {{tarefa.prioridade}}</li>
+       </ul>
     </div>
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
       <script src="script.js" charset="utf-8"></script>
