--- a/Aula2/index.html
+++ b/Aula2/index.html
@@ -7,8 +7,14 @@
   <body>
     <div ng-controller="TarefasController">
        <ul>
-         <li ng-repeat="tarefa in tarefas">{{tarefa.nome}} - {{tarefa.prioridade}}</li>
+         <li ng-repeat="(key, tarefa) in tarefas">
+           {{tarefa.nome}} - {{tarefa.prioridade}}
+           <a href="#" ng-click="delete(key)">Remover</a>
+         </li>
        </ul>
+       Nome: <input type="text" ng-model="nome"><br>
+       Prioridade: <input type="text" ng-model="prioridade">
+       <button type="button" ng-click="add()">Incluir</button>
     </div>
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
       <script src="script.js" charset="utf-8"></script>
