--- a/Aula2/index.html
+++ b/Aula2/index.html
@@ -12,8 +12,8 @@
            <a href="#" ng-click="delete(key)">Remover</a>
          </li>
        </ul>
-       Nome: <input type="text" ng-model="nome"><br>
-       Prioridade: <input type="text" ng-model="prioridade">
+       Nome: <input type="text" ng-model="tarefa.nome"><br>
+       Prioridade: <input type="text" ng-model="tarefa.prioridade">
        <button type="button" ng-click="add()">Incluir</button>
     </div>
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
