--- a/Aula2/index.html
+++ b/Aula2/index.html
@@ -8,7 +8,7 @@
     <div ng-controller="TarefasController">
       <input type="text" ng-model="busca">
        <ul>
-         <li ng-repeat="(key, tarefa) in tarefas | filter:busca">
+         <li ng-repeat="(key, tarefa) in tarefas | filter:busca | orderBy:'prioridade' | limitTo:2">
            {{tarefa.nome}} - {{tarefa.prioridade}}
            <a href="#" ng-click="delete(key)">Remover</a>
          </li>
@@ -16,6 +16,13 @@
        Nome: <input type="text" ng-model="tarefa.nome"><br>
        Prioridade: <input type="text" ng-model="tarefa.prioridade">
        <button type="button" ng-click="add()">Incluir</button>
+
+       <hr>
+
+       {{nome | uppercase}} <br>
+       {{idade}} <br>
+       {{salario | currency:'R$ '}} <br>
+       {{salario | number:2}}
     </div>
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
       <script src="script.js" charset="utf-8"></script>
