criacao de um filtro personalizado

--- a/Aula2/index.html
+++ b/Aula2/index.html
@@ -18,7 +18,7 @@
        <button type="button" ng-click="add()">Incluir</button>
 
        <hr>
-
+       {{nome | reverse:'reverteu':true}} <br>
        {{nome | uppercase}} <br>
        {{idade}} <br>
        {{salario | currency:'R$ '}} <br>
