adicionado ng-bind num paragrafo para fazer a exibicao do nome sem ser por AE(angular expression

--- a/Aula09/index.html
+++ b/Aula09/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div ng-controller="DiretivasController">
-      {{dev}}
+      <p ng-bind="dev"></p>
     </div>
   </body>
 </html>
