é possivel adicionar varios prefixos nas diretivas

--- a/Aula09/index.html
+++ b/Aula09/index.html
@@ -9,6 +9,10 @@
   <body>
     <div ng-controller="DiretivasController">
       <p ng-bind="dev"></p>
+      <p ng:bind="dev"></p>
+      <p ng_bind="dev"></p>
+      <p data-ng-bind="dev"></p>
+      <p x-ng-bind="dev"></p>
     </div>
   </body>
 </html>
