--- a/Aula09/index.html
+++ b/Aula09/index.html
@@ -8,11 +8,7 @@
   </head>
   <body>
     <div ng-controller="DiretivasController">
-      <p ng-bind="dev"></p>
-      <p ng:bind="dev"></p>
-      <p ng_bind="dev"></p>
-      <p data-ng-bind="dev"></p>
-      <p x-ng-bind="dev"></p>
+       <p ef-dev></p>
     </div>
   </body>
 </html>
