diretivas personalizadas - templateUrl

--- a/Aula09/index.html
+++ b/Aula09/index.html
@@ -9,6 +9,7 @@
   <body>
     <div ng-controller="DiretivasController">
        <p ef-dev></p>
+       <p ef-dev type="idade"></p>
     </div>
   </body>
 </html>
