tipos de diretivas (atributo, elemento, classe)

--- a/Aula09/index.html
+++ b/Aula09/index.html
@@ -10,6 +10,10 @@
     <div ng-controller="DiretivasController">
        <p ef-dev></p>
        <p ef-dev type="idade"></p>
+
+      <hr>
+      <ef-dev></ef-dev><br>
+      <ef-dev type="idade"></ef-dev>
     </div>
   </body>
 </html>
