finalizacao da validação personalizada

--- a/Forms/index.html
+++ b/Forms/index.html
@@ -33,7 +33,7 @@
           </ul>
         </div>
          <br>
-        Idade: <input type="text" name="idade" ng-model="formulario.idade" required min-idade>
+        Idade: <input type="text" name="idade" ng-model="formulario.idade" required min-idade="18">
         <div ng-show="form1.idade.$touched">
           <ul>
             <li ng-show="form1.idade.$error.required">Este campo é obrigatório</li>
